add mcp hub
